# GPUDownloader

./: meson.build  net.pavela.gpudownloader.json
data/: meson.build  net.pavela.gpudownloader.appdata.xml.in  net.pavela.gpudownloader.desktop.in  net.pavela.gpudownloader.gschema.xml
po/: POTFILES  meson.build
src/: gpudownloader.gresource.xml  gpudownloader.in  main.py  meson.build  window.py  window.ui  window.ui~
